src/Aim.java
/* Generated By:JavaCC: Do not edit this line. Aim.java */
package trollAim;
import java.io.*;

public class Aim implements AimConstants {

    // declare constants

    public static final int No = 0;
    public static final int Yes = 1;

    public static final int Max_Array_Size = 10000;

    public static final int Left_Side = 100;
    public static final int Right_Side = 101;

    public static final int G_Matrix = 0;
    public static final int H_Matrix = 1;

    public static final int Endogenous = 0;
    public static final int Exogenous = 1;

    public static final int Data = 0;
    public static final int Notd = 1;
    public static final int Dtrm = 2;
    public static final int Innov = 3;

    public static final int Stoch = 0;
    public static final int Imposed = 1;

    public static final int Wrong_Node_Type = 0;
    public static final int Invalid_Node_Type = 1;
    public static final int Cannot_Allocate_Memory = 2;

  static java.util.Stack argStack = new java.util.Stack();
  static Model m;

  public static void main(String args[]) throws ParseException {

  Aim parser = new Aim(System.in);
  int status = 0;
  status = parser.runParser(args);

// code to test reentrance
//  String newargs[] = new String[1];  
//  newargs[0] = new String("antulio");
//  status = parser.runParser(newargs);

  System.exit(status);
}
  public static int notMain(String args[]) throws ParseException {

  Aim parser = new Aim(System.in);
  int status = 0;
  status = parser.runParser(args);

// code to test reentrance
//  String newargs[] = new String[1];  
//  newargs[0] = new String("antulio");
//  status = parser.runParser(newargs);

  return(status);
}

  public static int runParser(String args[]) throws ParseException {

    int ErrorCount;
    int i;
    String PathName;
    String FileName;
    int FileIndex;
    int lastSlashIndex;
    boolean verbose = false;

    if ((args.length == 1) ||
        ((args.length == 2) && (args[0].equals((String) "-v")))) {
        if (args.length == 2) {
          verbose = true;
          FileIndex = 1;
          }
        else
          FileIndex = 0;
        System.err.println("Aim Java Parser Version 0.93: Reading from file " +
                           args[FileIndex] + "...");
        try {
          PathName = args[FileIndex];
          lastSlashIndex = PathName.lastIndexOf('/');   // Real OS's
          if (lastSlashIndex < 0)
            lastSlashIndex = PathName.lastIndexOf('\\'); // Windows
          if (lastSlashIndex < 0)
            FileName = PathName;
          else
            FileName = PathName.substring(lastSlashIndex+1);
          m = new Model(FileName);
//          parser = new Aim(new java.io.FileInputStream(PathName));
          ReInit(new java.io.FileInputStream(PathName));
        } catch (java.io.FileNotFoundException e) {
          System.err.println("Aim Java Parser Version 0.93: File " +
                             args[FileIndex] + " not found.");
          System.err.print(e.getMessage());
          return(1);
        }
    }
    else {
      System.err.println("Aim Java Parser 0.93 usage is:");
      System.err.println("         java Aim [ -v ] inputfile");
      System.err.println("   -v yields verbose output.");
      return(2);
    }

    try {
//      parser.model(
        model();
      System.err.println("Aim Java Parser Version 0.93: No syntactic errors found.");
    } catch (ParseException e) {
      System.err.println("Aim Java Parser Version 0.93: Syntactic errors found.");
      System.err.print(e.getMessage());
      return(3);
    }

    // DEBUG
    //   System.err.println("\n\nModel before expanding subtrees:");
    //   m.Print();

    m.ExpandSubtrees();

    // DEBUG
    // System.err.println("\n\nModel after expanding subtrees:");
    // m.Print();

    ErrorCount = m.ErrorCheck();

    if (ErrorCount == 0)
      System.err.println("No semantic errors found.");
    else {
      System.err.print(ErrorCount + " semantic error");
      if (ErrorCount > 1)
        System.err.print("s");
      System.err.println(" found.");
      return(4);
    }

    m.BuildExogenousEquations();

    // DEBUG
    //     System.err.println("\n\nModel after building exogenous equations:");
    //     m.Print();

    if (verbose == true)
       m.PrintVerboseOutput();
       else
       m.PrintTerseOutput();

    m.PrintFunctions();

    return(0);
  }

  static final public void model() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case USEMOD:
      modelhead();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    varandcoefflists();
    eqnlist();
    modeltail();
  }

//void modelhead() :
//{  }
//{ 
//    <USEMOD> <IDENTIFIER> { m = new Model(token.image); } <SEMICOLON>
//}
  static final public void modelhead() throws ParseException {
 String s;
    jj_consume_token(USEMOD);
    jj_consume_token(IDENTIFIER);
                            s =token.image;
    jj_consume_token(SEMICOLON);
  }

  static final public void modeltail() throws ParseException {
    jj_consume_token(FILEMOD);
    jj_consume_token(SEMICOLON);
  }

  static final public void varandcoefflists() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        endogenouslist();
      } else if (jj_2_2(2)) {
        exogenouslist();
      } else if (jj_2_3(2)) {
        coefficientlist();
      } else if (jj_2_4(2)) {
        eqtypelist();
      } else if (jj_2_5(2)) {
        datatypelist();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADDSYM:
      case CHANGESYM:
      case COMMENT:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
  }

  static final public void endogenouslist() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADDSYM:
      jj_consume_token(ADDSYM);
      break;
    case CHANGESYM:
      jj_consume_token(CHANGESYM);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(ENDOGENOUS);
    label_2:
    while (true) {
      jj_consume_token(IDENTIFIER);
         Variable v = new Variable(token.image);
         v.setType(Endogenous);
         v.setDataType(Data);   // default for endogenous variables
         m.AddVariable(v);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(SEMICOLON);
  }

  static final public void exogenouslist() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADDSYM:
      jj_consume_token(ADDSYM);
      break;
    case CHANGESYM:
      jj_consume_token(CHANGESYM);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(EXOGENOUS);
    label_3:
    while (true) {
      jj_consume_token(IDENTIFIER);
         Variable v = new Variable(token.image);
         v.setType(Exogenous);
         v.setDataType(Dtrm);   // default for exogenous variables
         m.AddVariable(v);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
    }
    jj_consume_token(SEMICOLON);
  }

  static final public void coefficientlist() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADDSYM:
      jj_consume_token(ADDSYM);
      break;
    case CHANGESYM:
      jj_consume_token(CHANGESYM);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(COEFFICIENT);
    label_4:
    while (true) {
      jj_consume_token(IDENTIFIER);
         m.AddCoefficient(token.image);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
    }
    jj_consume_token(SEMICOLON);
  }

  static final public void eqtypelist() throws ParseException {
  String name;
  Token x;
    jj_consume_token(COMMENT);
    jj_consume_token(EQTYPE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IMPOSED:
      x = jj_consume_token(IMPOSED);
      break;
    case STOCH:
      x = jj_consume_token(STOCH);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_5:
    while (true) {
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMENT:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMENT);
      }
      jj_consume_token(IDENTIFIER);
         int index;
         int eqtype;
         name = token.image;
         if (x.kind == IMPOSED)
            eqtype = Imposed;
         else
            eqtype = Stoch;

         m.AddEquation(new Equation(name, eqtype));
      if (jj_2_6(2)) {
        ;
      } else {
        break label_5;
      }
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMENT:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_7;
      }
      jj_consume_token(COMMENT);
    }
    jj_consume_token(SEMICOLON);
  }

  static final public void datatypelist() throws ParseException {
  Token x;
    jj_consume_token(COMMENT);
    jj_consume_token(DATATYPE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DATA:
      x = jj_consume_token(DATA);
      break;
    case NOTD:
      x = jj_consume_token(NOTD);
      break;
    case DTRM:
      x = jj_consume_token(DTRM);
      break;
    case INNOV:
      x = jj_consume_token(INNOV);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_8:
    while (true) {
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMENT:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_9;
        }
        jj_consume_token(COMMENT);
      }
      jj_consume_token(IDENTIFIER);
         int index = m.FindVariableIndex(token.image);
         switch (x.kind) {
         case DATA:
            if (index < 0) { // this should only come up if bad model file
              Variable v = new Variable(token.image);
              v.setType(Exogenous); // ????????????
              v.setDataType(Data);
              m.AddVariable(v);
              }
            else {
              m.Variables[index].setDataType(Data);
              }
            break;
         case NOTD:
            if (index < 0) { // this should only come up if bad model file
              Variable v = new Variable(token.image);
              v.setType(Exogenous); // ????????????
              v.setDataType(Notd);
              m.AddVariable(v);
              }
            else {
              m.Variables[index].setDataType(Notd);
              }
            break;
         case DTRM:
            if (index < 0) {
              Variable v = new Variable(token.image);
              v.setType(Exogenous);
              v.setDataType(Dtrm);
              m.AddVariable(v);
              }
            else {
              m.Variables[index].setDataType(Dtrm);
            }
            break;
         case INNOV:
            if (index < 0) {
              Variable v = new Variable(token.image);
              v.setType(Exogenous);
              v.setDataType(Innov);
              m.AddVariable(v);
              }
            else {
              m.Variables[index].setDataType(Innov);
            }
            break;
            }
      if (jj_2_7(2)) {
        ;
      } else {
        break label_8;
      }
    }
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMENT:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_10;
      }
      jj_consume_token(COMMENT);
    }
    jj_consume_token(SEMICOLON);
  }

  static final public void eqnlist() throws ParseException {
  String name;
  Node n1;
  Node n2;
  Equation eq;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADDEQ:
      jj_consume_token(ADDEQ);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TOP:
        jj_consume_token(TOP);
        break;
      case BOTTOM:
        jj_consume_token(BOTTOM);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(COMMA);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    label_11:
    while (true) {
      jj_consume_token(IDENTIFIER);
                     name = token.image;
      jj_consume_token(COLON);
      expression();
      jj_consume_token(EQUALS);
      expression();
      jj_consume_token(COMMA);
            int index = m.FindEquationIndex(name);
            n1 = ((Node) argStack.pop());
            n2 = ((Node) argStack.pop());
            if (index < 0) // no eqtype was found for this equation
                {
                  eq = new Equation(name, n2, n1, Stoch); // "Stoch" is default
                  m.AddEquation(eq);
                }
            else  // this equation appeared in an eqtype line
                {
                  m.Equations[index].setLHS(n2);
                  m.Equations[index].setRHS(n1);
                }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_11;
      }
    }
    jj_consume_token(SEMICOLON);
  }

  static final public void expression() throws ParseException {
  Token x;
    term();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        x = jj_consume_token(PLUS);
        break;
      case MINUS:
        x = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      term();
            Node n1 = ((Node) argStack.pop());
            Node n2 = ((Node) argStack.pop());
            if ( x.kind == PLUS )
                argStack.push(new SumNode(n2, n1));
            else {
                ConstantNode cn1 = new ConstantNode(-1.0);
                ProductNode pn1 = new ProductNode(cn1, n1);
                argStack.push(new SumNode(n2, pn1));
                }
    }
  }

  static final public void term() throws ParseException {
  Token x;
    factor();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_13;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
        x = jj_consume_token(MULTIPLY);
        break;
      case DIVIDE:
        x = jj_consume_token(DIVIDE);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      factor();
            Node n1 = ((Node) argStack.pop());
            Node n2 = ((Node) argStack.pop());
            if ( x.kind == MULTIPLY )
               argStack.push(new ProductNode(n2, n1));
            else
                {
                ConstantNode cn1 = new ConstantNode(-1.0);
                PowerNode pown1 = new PowerNode(n1, cn1);
                argStack.push(new ProductNode(n2, pown1));
                }
    }
  }

  static final public void factor() throws ParseException {
    unary();
    label_14:
    while (true) {
      if (jj_2_8(2147483647)) {
        ;
      } else {
        break label_14;
      }
      jj_consume_token(EXP);
      factor();
            Node n1 = ((Node) argStack.pop());
            Node n2 = ((Node) argStack.pop());
            argStack.push(new PowerNode(n2, n1));
    }
  }

  static final public void unary() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
      element();
            Node n1 = ((Node) argStack.pop());
            ConstantNode cn1 = new ConstantNode(-1.0);
            argStack.push(new ProductNode(cn1, n1));
      break;
    case FLOAT:
    case INTEGER:
    case IDENTIFIER:
    case OPENPAREN:
      element();
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void element() throws ParseException {
  Double d;
  String VarName;
  int Lead;
  int Lag;
  int ELag;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPENPAREN:
      jj_consume_token(OPENPAREN);
      expression();
      jj_consume_token(CLOSEPAREN);
      break;
    case FLOAT:
    case INTEGER:
      constant();
      break;
    default:
      jj_la1[23] = jj_gen;
      if (jj_2_9(4)) {
        jj_consume_token(IDENTIFIER);
                                VarName = token.image;
        jj_consume_token(OPENPAREN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
          jj_consume_token(PLUS);
          break;
        default:
          jj_la1[22] = jj_gen;
          ;
        }
        jj_consume_token(INTEGER);
                 Lead = (int) Integer.parseInt(token.image);
        jj_consume_token(CLOSEPAREN);
          /* variable with a lead */
        ELag = No;
        argStack.push(new VariableNode(VarName, Lead, ELag));

        if (m.FindVariableIndex(VarName) == -1)
          {
            Variable v = new Variable(VarName);
            v.setType(Exogenous); // since it wasn't listed in endog list
            v.setDataType(Dtrm); // "Dtrm" is default for exogenous variables
            m.AddVariable(v);
          }
